repos/emily-python/contents/test/export/fail/recursive2.em
# NOT A TEST-- IS LOADED BY RECURSIVE.EM

let y = project.recursive.y
